--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "styled-components": "^5.2.0",
     "web-vitals": "^0.2.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.12.1",
+    "eslint-plugin-react": "^7.21.5"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
